bon/tests/integration/ui/compile_fail/invalid_setters_attr.stderr
error: `some_fn` setter function applies only to members with `#[builder(default)]` or members of `Option<T>` type (if #[builder(transparent)] is not set)
 --> tests/integration/ui/compile_fail/invalid_setters_attr.rs:5:23
  |
5 |     #[builder(setters(some_fn = foo))]
  |                       ^^^^^^^

error: `option_fn` setter function applies only to members with `#[builder(default)]` or members of `Option<T>` type (if #[builder(transparent)] is not set)
  --> tests/integration/ui/compile_fail/invalid_setters_attr.rs:11:23
   |
11 |     #[builder(setters(option_fn = bar))]
   |                       ^^^^^^^^^

error: `some_fn` setter function applies only to members with `#[builder(default)]` or members of `Option<T>` type (if #[builder(transparent)] is not set)
  --> tests/integration/ui/compile_fail/invalid_setters_attr.rs:17:36
   |
17 |     #[builder(transparent, setters(some_fn = foo))]
   |                                    ^^^^^^^

error: `option_fn` setter function applies only to members with `#[builder(default)]` or members of `Option<T>` type (if #[builder(transparent)] is not set)
  --> tests/integration/ui/compile_fail/invalid_setters_attr.rs:23:36
   |
23 |     #[builder(transparent, setters(option_fn = bar))]
   |                                    ^^^^^^^^^
